# language

./: .gitignore  FEATURES.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt  test_kernel.py
.github/workflows/: build.yml  lint.yml  security.yml  test.yml
docs/: Documentation.md  OVEN_LANGUAGE_API.md  OVEN_LANGUAGE_QUICK_REFERENCE.md  README.md  type_hints.md
examples/: smem_barrier_demo.py  type_hints_demo.py
oven/: __init__.py  __main__.py  ast_visitor.py  cli.py  compiler.py  language.py  mlir_generator.py
oven/utils/: __init__.py  mlir_utils.py
src/: __init__.py  ast_visitor.py  mlir_generator.py
tests/: __init__.py  conftest.py  test_automatic_operators.py  test_compiler.py  test_extended_functions.py  test_for_loop_edge_cases.py  test_for_loops.py  test_gpu_kernel.py  test_math_functions.py  test_matmul_mlir.py  test_oven_import.py  test_parametrized.py  test_smem_barrier.py  test_type_hints.py  test_vector_operations.py
tests/examples/: complex.mlir  complex.py  sample.mlir  sample.py  vector_kernels.py
